chore: Improved minio, helm api to be restful
